src/styles/main.scss
@charset "UTF-8";

@import 'node_modules/bootstrap/scss/bootstrap.scss';
@import '../pages/stories/stories.scss';
@import '../pages/sponsors/sponsors.scss';
@import '../components/aboutItem/AboutItem.scss';
@import './constants.scss';

.landing-section {
  height: 100vh;
  display: flex;
  align-items: center;
}

.hero-logo {
  width: 100%;
  height: 100%;
}

.icon {
  height: 50px;
  width: 50px;
}

// HEADER

.header-title {
  font-size: 72px;
  font-weight: 700;
  padding: 15px 0px;
}

.header-content {
  margin-bottom: 20px;
}

.header-text {
  font-size: $large-body;
}

// ABOUT

.about-section {
  height: 160vh;
}

.about-title {
  font-size: $subtitle;
  font-weight: 700;
  margin-bottom: 50px;
}

// FAQ

.faq-section {
  clear: both;
  background: #d3d3d3;
}

.faq-masonry-element {
  width: 500px;
  padding: 10px 20px;
}

// SPONSORS

.sponsors-section {
  .sponsor-header {
    font-size: 35px;
    padding-top: 15px;
  }

  .sponsor {
    align-content: center;
    transition-duration: 0.3s;

    height: 150px;
    width: 100%;
    overflow: hidden;

    margin-top: 10px;
    margin-bottom: 10px;
    @media (max-width: 992px) {
      height: auto;
    }
  }

  .sponsor-square {
    height: 225px;
    @media (max-width: 992px) {
      height: auto;
    }
  }

  .sponsor:hover {
    transform: scale(1.05);
  }

  .intuitLogo {
    height: 200px;
    position: relative;
    top: -50px;
    @media (max-width: 992px) {
      height: auto;
      top: 0;
    }
  }

  .sponsor-image {
    height: 100px;
    width: auto;
    @media (max-width: 992px) {
      height: auto;
      width: 100%;
    }
  }

  .sponsor-square-image {
    height: 200px;
    @media (max-width: 992px) {
      height: auto;
    }
  }
}

